# c-linked-list

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: list.h  listConfig.h.in
src/: list.c
tests/: ListTestTypes.cpp  ListTestTypes.hpp  iterator.cpp  list.cpp
